# resume-ai-analyzer

./: .env.example  .gitignore  App.py  App_fixed.py  App_no_db.py  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  Procfile  README.md  Resume_AI_Presentation.md  Resume_AI_Presentation.pptx  Resume_AI_Presentation_Real.pptx  app_clean.py  cloud-deploy.md  create_ppt.py  deploy.bat  deploy.sh  deploy_public.py  docker-compose.yml  heroku.yml  index.py  nginx.conf  pyproject.toml  quick-deploy.py  requirements-deploy.txt  requirements.txt  setup.py
