[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-ai-analyzer"
version = "1.0.0"
description = "Professional Resume Analysis and Career Guidance Tool"
authors = [{name = "Resume AI Team"}]
license = {text = "MIT"}
dependencies = [
    "streamlit==1.28.1",
    "pandas==2.1.3",
    "plotly==5.17.0",
    "nltk==3.8.1",
    "pdfminer3==1.0.3",
    "pyresparser==1.0.6",
    "streamlit-tags==1.0.5",
    "Pillow==10.0.1",
    "geocoder==1.38.1",
    "geopy==2.4.1",
]

[project.scripts]
app = "app_clean:main"
